# pendulums-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cli/: command_exit.rs  http_helper.rs  mod.rs  spinner.rs
src/cli/activity/: activity_helper.rs  delete_activity.rs  get_activities_log.rs  get_current_activity.rs  mod.rs  start_activity.rs  stop_current_activity.rs  update_activity.rs  update_current_activity.rs
src/cli/auth/: mod.rs  sign_in.rs  sign_out.rs  sign_up.rs
src/cli/note/: get_notes.rs  mod.rs
src/cli/project/: create_project.rs  list_projects.rs  mod.rs
src/commands/: sign_in.rs
