[package]
name = "pendulums-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
dirs = "5.0.1"
inquire = "0.6.2"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
reqwest_cookie_store = "0.6.0"
rpassword = "7.2.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.111"
spinners = "4.1.0"
tokio = { version = "1.33.0", features = ["full"] }
